tools/manifests/gatewayclass.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gwclass-2
spec:
  controllerName: "k8s.io/ingate"
