tools/manifests/gateway-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway-2
spec:
  gatewayClassName: ingate
  listeners:
    - name: http
      protocol: HTTP
      port: 80
