tools/manifests/non-matching-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: non-matching-gateway
spec:
  gatewayClassName: does-not-match
  listeners:
    - name: http
      protocol: HTTP
      port: 80
